--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ langchain-google-genai==2.1.8
 chromadb==0.5.3
 python-dotenv==1.0.1
 pydantic==2.8.2
-langchain-text-splitters==0.2.2
-langchain-core==0.3.68 
+langchain-text-splitters==0.2.20 
+langchain-core==0.3.68         
+langchain==0.2.11  
