--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ chromadb==0.5.3
 python-dotenv==1.0.1
 pydantic==2.8.2
 langchain-text-splitters==0.3.9  
-langchain-core==0.3.68         
+langchain-core       
 langchain==0.2.11  
