--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ langchain-google-genai==2.1.8
 chromadb==0.5.3
 python-dotenv==1.0.1
 pydantic==2.8.2
-langchain-text-splitters==0.3.9  
-langchain-core       
-langchain==0.2.11  
+langchain-text-splitters==0.3.9
+langchain-core
+langchain
